[metadata]
name = pip_prefix_wrap
version = 1.0.0
description = patch pip scheme to posix_prefix
url = https://github.com/cielavenir/pip-prefix-wrap
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = cielavenir
author_email = cielartisan@gmail.com
keywords = pip
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development

[options]
packages = find:
# python_requires: only applies to something with PEP 668
python_requires = >=3.11
install_requires =
    # setuptools
